crates/hir-ty/tests/snapshots/jls_annotation_elements__element_free_annotation_type.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

class Anns {
    @Override(target = "")
    public String toString() {
        return "";
    }
}

@3:23: unknown-annotation-member: No annotation member named 'target'
