crates/hir-ty/tests/snapshots/jls_annotation_elements__element_free_annotation_type_pair_reports.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

class Anns {
    @Override(target = "")
    @Override(toString = "")
    public String toString() {
        return "";
    }
}

@3:23: unresolved-annotation-member: No annotation member named 'target'
@4:25: unknown-annotation-member: No annotation member named 'toString'
