crates/hir-ty/tests/snapshots/jls_annotation_elements__empty_library_annotation_type_arguments.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

import java.lang.annotation.Documented;

@Documented(nope = 1)
@interface Ann {}

@4:19: unresolved-annotation-member: No annotation member named 'nope'
