crates/hir-ty/tests/snapshots/jls_annotation_elements__enum_constant_bare_unknown.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

enum Color { RED, GREEN }

@interface ColorAnn {
    Color value();
}

@ColorAnn(value = BLUE)
class Anns {}

@8:18: unknown-annotation-element-constant: Cannot resolve symbol 'BLUE'
