crates/hir-ty/tests/snapshots/jls_annotation_elements__jdk_library_annotation.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@SuppressWarnings(1)
class Anns {}

@2:18: annotation-element-type-mismatch: Incompatible types. Found: 'int', required: 'String'
