crates/hir-ty/tests/snapshots/jls_annotation_elements__literal_type_mismatch.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Ann {
    String value();
}

@Ann(value = 1)
class Anns {}

@6:13: annotation-element-type-mismatch: Incompatible types. Found: 'int', required: 'String'
